@@ -24,13 +24,13 @@ SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_admin")
 
 SET (VERSION_MAJOR "0")
 SET (VERSION_MINOR "9")
-SET (VERSION_PATCH "2")
-SET (VERSION_SUFFIX "")
+SET (VERSION_PATCH "3")
+SET (VERSION_SUFFIX "svn")
 SET (VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}${VERSION_SUFFIX})
 ADD_DEFINITIONS(-D'VERSION="${VERSION}"')
 
 OPTION(ENABLE_PCH    "Enable precompiled headers" OFF)
-OPTION(STATIC_ASEQMM "Build aseqmm static library" ON)
+OPTION(STATIC_DRUMSTICK "Build drumstick static library" ON)
 
 FIND_PACKAGE(Qt4 REQUIRED)
 FIND_PACKAGE(KDE4 REQUIRED)
@@ -77,27 +77,27 @@ ELSE(ALSA_FOUND)
     MESSAGE(FATAL_ERROR "Please install ALSA library and headers (libasound2)")
 ENDIF(ALSA_FOUND)
 
-# ASEQMM LIBRARY BUILD TYPE
-IF(STATIC_ASEQMM)
+# DRUMSTICK LIBRARY BUILD TYPE
+IF(STATIC_DRUMSTICK)
     SET(BUILD_SHARED_LIBS OFF)
-    SET(ASEQMM_LIBS aseqmm)
-    SET(ASEQMM_LIB_DIR ${KMETRONOME_BINARY_DIR})
-    SET(ASEQMM_INC_DIR ${KMETRONOME_SOURCE_DIR}/aseqmm/include)
-    ADD_SUBDIRECTORY(aseqmm)
-ELSE(STATIC_ASEQMM)
+    SET(DRUMSTICK_LIBS drumstick-alsa)
+    SET(DRUMSTICK_LIB_DIR ${KMETRONOME_BINARY_DIR})
+    SET(DRUMSTICK_INC_DIR ${KMETRONOME_SOURCE_DIR}/drumstick/include)
+    ADD_SUBDIRECTORY(drumstick)
+ELSE(STATIC_DRUMSTICK)
     SET(BUILD_SHARED_LIBS ON)
-    PKG_CHECK_MODULES(ASEQMM REQUIRED aseqmm>=0.2)
-    IF(ASEQMM_FOUND)
-       SET(ASEQMM_LIBS ${ASEQMM_LIBRARIES})
-       #MESSAGE(STATUS "ASEQMM_LIBS: ${ASEQMM_LIBS}")
-       LIST(APPEND ASEQMM_LIB_DIR ${ASEQMM_LIBRARY_DIRS} ${ASEQMM_LIBDIR} )
-       #MESSAGE(STATUS "ASEQMM_LIB_DIR: ${ASEQMM_LIB_DIR}")
-       LIST(APPEND ASEQMM_INC_DIR ${ASEQMM_INCLUDE_DIRS} ${ASEQMM_INCLUDEDIR})
-       #MESSAGE(STATUS "ASEQMM_INC_DIR: ${ASEQMM_INC_DIR}")
-    ELSE(ASEQMM_FOUND)
-       MESSAGE(FATAL_ERROR "Please install aseqmm library and headers (libaseqmm0)")
-    ENDIF(ASEQMM_FOUND)
-ENDIF(STATIC_ASEQMM)
+    PKG_CHECK_MODULES(DRUMSTICK REQUIRED drumstick-alsa>=0.2)
+    IF(DRUMSTICK_FOUND)
+       SET(DRUMSTICK_LIBS ${DRUMSTICK_LIBRARIES})
+       #MESSAGE(STATUS "DRUMSTICK_LIBS: ${DRUMSTICK_LIBS}")
+       LIST(APPEND DRUMSTICK_LIB_DIR ${DRUMSTICK_LIBRARY_DIRS} ${DRUMSTICK_LIBDIR} )
+       #MESSAGE(STATUS "DRUMSTICK_LIB_DIR: ${DRUMSTICK_LIB_DIR}")
+       LIST(APPEND DRUMSTICK_INC_DIR ${DRUMSTICK_INCLUDE_DIRS} ${DRUMSTICK_INCLUDEDIR})
+       #MESSAGE(STATUS "DRUMSTICK_INC_DIR: ${DRUMSTICK_INC_DIR}")
+    ELSE(DRUMSTICK_FOUND)
+       MESSAGE(FATAL_ERROR "Please install drumstick libraries and headers (libdrumstick-alsa0)")
+    ENDIF(DRUMSTICK_FOUND)
+ENDIF(STATIC_DRUMSTICK)
 
 SET(USE_PCH FALSE)
 IF(ENABLE_PCH)
@@ -137,7 +137,7 @@ ADD_CUSTOM_TARGET ( tarball
     COMMAND cp -r icons kmetronome-${VERSION}
     COMMAND cp -r po kmetronome-${VERSION}
     COMMAND cp -r src kmetronome-${VERSION}
-    COMMAND cp -rHL aseqmm kmetronome-${VERSION}
+    COMMAND cp -rHL drumstick kmetronome-${VERSION}
     COMMAND cp AUTHORS ChangeLog CMakeLists.txt configure.* COPYING INSTALL kmetronome.* net.sourceforge.kmetronome.* NEWS README TODO kmetronome-${VERSION}
     COMMAND tar -cj --exclude CVS --exclude .cvsignore -f kmetronome-${VERSION}.tar.bz2 kmetronome-${VERSION}
     COMMAND tar -cz --exclude CVS --exclude .cvsignore -f kmetronome-${VERSION}.tar.gz kmetronome-${VERSION}
