@@ -26,12 +26,12 @@ ENDIF(USE_PCH)
 
 INCLUDE_DIRECTORIES(
     ${ALSA_INC_DIR}
-    ${ASEQMM_INC_DIR}
+    ${DRUMSTICK_INC_DIR}
 )
 
 LINK_DIRECTORIES(
     ${ALSA_LIB_DIR}
-    ${ASEQMM_LIB_DIR}
+    ${DRUMSTICK_LIB_DIR}
 )
 
 SET(kmetronome_SRCS 
@@ -70,7 +70,7 @@ ENDIF(USE_PCH)
 TARGET_LINK_LIBRARIES(kmetronome
     ${KDE4_KDEUI_LIBS}
     ${ALSA_LIBS}
-    ${ASEQMM_LIBS}
+    ${DRUMSTICK_LIBS}
 )
 
 # Install targets
