@@ -1,3 +1,7 @@
+2010-02-20 00:00 plcl
+    
+    * aseqmm renamed to drumstick
+
 2009-12-23 00:00 plcl
 
     * Release 0.9.2
